# Bask

./: .clangd  .gitignore  .vimspector.json  CMakeLists.txt  Cargo.toml  README.md  Readme.md  grammer
design/: Chess.simlang  StructsAndEnums.txt  TicTacToe.bsk  parsing rules.txt  principles  test.simlang
design/chess/: Chess.bsk  chess.c  chess.h
include/: AST.h  codegen.h  lexer.h  options.h  parser.h  symtab.h  tokens.h  types.h
include/AST/: AST.h  AST_ControlFlow.h  AST_Expressions.h  AST_Preamble.h  AST_Statements.h
lib/: Makefile
lib/io/: Makefile  io.bsk  put.c
specs/: expressions.md  grammer
src/: bask.pest  enumParseTest.bsk  fnParseTest.bsk  main.cpp  main.rs  parse.rs  symtab.cpp  tokens.cpp  types.cpp
src/AST/: check_semantics.cpp  fold_binary.cpp  fold_expressions.cpp  get_expr_type.cpp  utils.cpp
src/cli/: options.cpp
src/codegen/: codegen.cpp  compile.cpp  control_flow.cpp  expr.cpp  stmt.cpp  top_level.cpp  types.cpp
src/compiler/: compile.rs  error.rs  mod.rs  typesystem.rs
src/compiler/codegen/: Makefile  mod.rs  stringtest  stringtest.bc  stringtest.ll  test.ll
src/compiler/codegen/lib/: Makefile  base_conversions.ll  conversions.bsk  conversions.ll  lib.ll  list.c  list.ll  math.ll  print.ll  str.ll  string.ll
src/compiler/parser/: AST.rs  ast.rs  bask.pest  mod.rs  parse.rs  test.pest  tests.rs
src/compiler/parser/tests/: control_flow.rs  data_types.rs  expressions.rs  mod.rs  statements.rs
src/compiler/symtab/: mod.rs  scope.rs  symbol.rs  tests.rs
src/compiler/typecheck/: mod.rs
src/compiler/typesystem/: enforce.rs  from_ast.rs  functions.rs  mod.rs  tests.rs
src/lexer/: lexer.cpp  literals.cpp  token.cpp
src/lib/: .gitignore  Makefile  math.ll
src/parser/: ASTutils.cpp  control_flow.cpp  expression.cpp  parser.cpp  statements.cpp
src/runtime/: .vimspector.json  Makefile  list.c  log.c  mod.rs  slice.c  string.c  types.rs
src/runtime/include/: list.h  log.h  slice.h  string.h
src/runtime/tests/: Makefile  a.out  main.c
src/types/: AST_typecheck.cpp  types.cpp
test/: AST.cpp  AST_folding.cpp  SymTab.cpp  Vector.bsk  a.out  all.sh  casting.bsk  chess.bsk  dataTypeTest.bsk  enumParseTest.bsk  expression.bsk  fnParseTest.bsk  lexer.cpp  option.bsk  parser.cpp  syaTest.bsk  syaTest.ll  types.cpp
test/chess2/: chess.bsk  main.bsk
test/codegen/: KLSUITE_codegen.sh  TESTSUITE_codegen.sh  bool_expr.kl  consts.cpp  decl.cpp  expressions.cpp  float_expr.kl  func_def.cpp  functions.bsk  functions.kl  if.cpp  int_expr.kl  type_to_llvm.cpp  unary.cpp  while.cpp
test/playground/: Makefile
test/sample/: binary_expressions.kl  if.bsk  if.kl  test.kl  while.bsk
test/types/: expr_type.cpp  to_string.cpp  type_check_decl.cpp
test/utils/: testutils.cpp  utils.h
